Fix NPE when using CLI with just 1 argument of strategy name.